# live-shaders

./: CMakeLists.txt  main.c
actions/: display.c  display.h  file.c  file.h  gtk_log.c  gtk_log.h  log.c  log.h
events/: main.c  main.h
ui/: main.c  main.h
